src/objects/PSA_Time_Off_Stage__c.object
<CustomObject>
    <description>Staging object to hold Time Off requests from and external system that will be used to update assignments, schedules, and timecards in PSA</description>
    <fields>
        <fullName>PSA_GW_Integration_Id__c</fullName>
        <label>GW Integration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Hours__c</fullName>
        <label>Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jury Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Time_Off_Date__c</fullName>
        <label>Time Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_To_be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Worker_Id__c</fullName>
        <label>Worker Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PSA Time Off Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Worker_Id__c</columns>
        <columns>PSA_Time_Off_Date__c</columns>
        <columns>PSA_Hours__c</columns>
        <columns>PSA_GW_Integration_Id__c</columns>
        <columns>PSA_Processed__c</columns>
        <columns>PSA_Processed_Date__c</columns>
        <columns>PSA_Request_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TOS-{00000}</displayFormat>
        <label>Time Off Stage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Time Off Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>